[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "das-separation"
version = "0.1.0"
description = "DAS Multi-Event Separation – dataset utilities and algorithms"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "scikit-learn>=1.0",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]
